--- a/Code/Algorithms/Books/AlgorithmsForInterviews/04a_graph-algorithms_graph-search.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/04a_graph-algorithms_graph-search.yml
@@ -111,3 +111,16 @@ notes:
       Let \\(T\\) be a tree, where each edge is labeled with a real-valued distance. Define the diameter of \\(T\\) to be the length on a longest path in \\(T\\). Design an efficient algorithm to compute the diameter of \\(T\\).
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 44-5.
+
+
+- fields:
+    Front: |
+      ## 04.09: Timing analysis
+
+      A combinational logic network consists of primary inputs and logic gates. Some of the gates may be designated as being primary outputs. Each gate has an output and a number of inputs --- these inputs may be primary inputs or the outputs of other gates. A cycle of gates is defined as a sequence of gates \\(\langle g_0,g_1,\ldots,g_{n-1},g_0 \rangle\\) starting and ending at the same gate such that for each consecutive pair of gates in the sequence, the first gate is an input to the second gate. Cycles of gates are disallowed.
+
+      Each gate has a fixed delay. A change at the primary让lput propagates through the logic network and eventually the output of every gate stops changing.
+
+      Given a logic network with primary inputs changing, find the smallest time after which all the primary outputs no longer change.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 45.
