--- a/Code/Algorithms/Books/AlgorithmsForInterviews/04b_graph-algorithms_advanced-graph-algorithms.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/04b_graph-algorithms_advanced-graph-algorithms.yml
@@ -178,3 +178,22 @@ notes:
       Design a linear-time algorithm for checking if a CNF in which each clause contains no more than two variables is satisfiable.
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 50.
+
+
+- fields:
+    Front: |
+      ## 04.25: Theory of equality
+
+      Programs are usually checked using testing --- a number of manually written or random test cases are applied to the program and the program's results are checked by assertions or visual inspection.
+
+      Formal verification consists of examining a program and analytically determining if there exists an input for which an assertion fails. Formal verification of general programs is undecidable. However there are significant subclasses of general programs for which the verification problem is decidable.
+
+      Consider the following problem: given a set of variables \\(x_1,\ldots,x_n\\), equality constraints of the form \\(x_i = x_j\\) and inequality constraints of the form \\(x_i \ne x_j\\), is it possible to satisfy all the constraints simultaneously?
+
+      For example, the constrains \\(x_1 = x_2\\), \\(x_2 = x_3\\), \\(x_3 = x_4\\), \\(x_4 \ne x_1\\) cannot be satisfied simultaneously.
+
+      Such constraints arise in checking the equivalence of loop-free programs with uninterpreted functions.
+
+      Design an efficient algorithm that takes as input a collection of equality and inequality constraints and decides whether the constraints can be satisfied simultaneously.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 50-1.
