--- a/Code/Algorithms/Books/AlgorithmsForInterviews/05_algorithms-on-strings.yml
+++ b/Code/Algorithms/Books/AlgorithmsForInterviews/05_algorithms-on-strings.yml
@@ -60,3 +60,25 @@ notes:
       Develop a linear-time algorithm for checking if a string \\(S\\) is a cyclic rotation of another string \\(R\\). (For example, _arc_ is a cyclic rotation of _car_.)
 
       --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 53.
+
+
+- fields:
+    Front: |
+      ## 05.05: Normalize URLs
+
+      A URL is described canonically in the following way:
+
+      ```
+      <protocol>://<hostname>:[<port>]/<path>
+      ```
+
+      There may be a number of different URL strings that are semantically equivalent. For example, `cnn.com` is equivalent to `http://cnn.com`, and `http://www.ece.utexas.edu/index.html` to `http://www.ece.utexas.edu`. Applications such as web search that deal with URLs need to perform transformations to a URL string to normalize it. The transformations may vary from application to application.
+
+      Implement a function which takes a URL as input and performs the following transformations on it:
+
+      1. make hostname and protocol lowercase,
+      2. if it ends in "`index.html`" or "`default.html`", remove the filename,
+      3. if protocol field is missing, add "`http://`" at the beginning, and
+      4. replace consecutive '`/`' characters by a single '`/`' in the "path" segment of the URL.
+
+      --- Aziz and Prakash; _Algorithms for Interviews_; version 1.0.0 (September 1, 2010); p 53-4.
